# website

./: .gitignore  _config.yml  index.html
.github/workflows/: deploy.yml
.workflows/: deploy.yml
_site/: flip-card.css  index.css  index.html
_site/line_art/: index.html
_site/line_art/line_art/pkg/: line_art_bg.wasm
_site/line_art/line_art/src/: annealing.rs
_site/map/: index.html
_site/pkg/: audio_bg.wasm.d.ts
_site/writing/: leap_years.html
_site/writing/string_protagonist/: audio.js  index.html
_site/writing/string_protagonist/sound-clips/: E major acoustic.m4a  Fsharp7add11.m4a  Riff.m4a
birthday_paradox/: index.html  worker.js
public/: _config.yml  index.css  index.html
public/24_solver/: index.html
public/_includes/: head.html
public/_layouts/: default.html
public/_site/: index.css  index.html
public/_site/24_solver/: index.html
public/_site/birthday_paradox/: index.html  worker.js
public/_site/figgie_equity/: index.html
public/_site/map/: index.html
public/_site/pkg/: audio.d.ts  audio.js
public/_site/writing/: fizzbuzzed.html  how_many_girls.html  leap_years.html
public/_site/writing/string_protagonist/: PitchProcessor.js  index.html
public/birthday_paradox/: index.html
public/figgie_equity/: index.html
public/line-art/: index.html  line-art.js  wasm-worker.js
public/line-art/line-art/: Cargo.toml
public/line-art/line-art/pkg/: line_art.d.ts  line_art_bg.js  line_art_bg.wasm
public/line-art/line-art/src/: lib.rs  line_art.rs
public/line_art/: index.html  js-worker.js  line_art.js  wasm-worker.js
public/line_art/line_art/: LICENSE_MIT
public/line_art/line_art/pkg/: line_art.d.ts  line_art.js  line_art_bg.wasm  package.json
public/line_art/line_art/src/: lib.rs
public/map/: index.html  map.css
public/tax_calculator/: index.html  tax-calculator.js  tax-rules.js  tax.css
public/writing/: fizzbuzzed.html  how_many_girls.html  leap_years.html
public/writing/string_protagonist/: index.html
public/writing/string_protagonist/audio/: Cargo.toml
(+7 files in other folders)
