[package]
name = "line_art"
version = "0.1.0"
authors = ["Alex Waese-Perlman <alexwaeseperlman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.84"}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
web-sys = {version = "0.3.76", features=['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'DedicatedWorkerGlobalScope']}
once_cell = "1.20.2"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-test = "0.3.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
